--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 -e .
-numpy==1.24.3
+numpy==1.26.4
 pandas==1.5.3
-scikit-learn==1.2.2
-imbalanced-learn==0.10.1
+scikit-learn==1.5.1
+imbalanced-learn==0.12.3
 matplotlib==3.7.1
-ucimlrepo==0.0.7
+ucimlrepo==0.0.3
+drf==0.1
